Dark mode: fix contrast for C++ specific styling

--- a/python_docs_theme/static/pydoctheme_dark.css
+++ b/python_docs_theme/static/pydoctheme_dark.css
@@ -124,3 +124,12 @@ div.note {
 img.invert-in-dark-mode {
     filter: invert(1) hue-rotate(.5turn);
 }
+
+/* -- object description styles --------------------------------------------- */
+
+/* C++ specific styling */
+
+.sig.c   .k, .sig.c   .kt,
+.sig.cpp .k, .sig.cpp .kt {
+    color: #5283ff;
+}
